--- a/keynotes.html
+++ b/keynotes.html
@@ -1786,7 +1786,7 @@
                                                         <p></p>
                                                         <p>&nbsp;</p> -->
 
-                                                        <p><strong>Bio:</strong></p>
+                                                        <p><strong><span style="font-size: 20px;">Biography</span></strong></p>
                                                         <p>The past decade has been a very exciting time for machine learning (ML) research. Significant research effort has focused on improving predictive performance of Deep Neural Networks (DNN) by proposing increasingly complex architectures which have surpassed even human-level performance. Even though these methods demonstrate incredible potential in saving valuable man-hours and minimizing inadvertent human mistakes, their adoption has been met with rightful skepticism and extreme circumspection in critical applications such as medical diagnosis, etc. The most paramount of these challenges is the lack of rationale behind DNN predictions - making them notoriously a black-box in nature. In extreme cases, this can create a lack of alignment between the designer's intended behavior and the model's actual performance. In this talk, I will discuss our recent research on explainable deep learning, in particular, I will discuss the concept learning models and show how the concept-based learning models and example-based learning models can be designed for explainable deep tabular learning. I will also discuss their applications in biomedicine and healthcare.
                                                             </p>
                                                         <p>&nbsp;</p>
@@ -1821,7 +1821,7 @@
                                                     <div
                                                         class="et_pb_team_member_image et-waypoint et_pb_animation_off">
                                                         <img decoding="async" width="216" height="216"
-                                                            src="./images/keynotes/John Quackenbush.jpg"
+                                                            src="./images/keynotes/John Quackenbush.jpeg"
                                                             alt="John Quackenbush"
                                                             sizes="(max-width: 216px) 100vw, 216px"
                                                             class="wp-image-1053" />
@@ -1847,10 +1847,14 @@
                                                         <p><strong>Abstract</strong></p>
                                                         <p></p>
                                                         <p>&nbsp;</p> -->
-
-                                                        <p><strong>Bio: </strong></p>
-                                                        <p>John Quackenbush is Professor of Computational Biology and Bioinformatics and Chair of the Department of Biostatistics at the Harvard TH Chan School of Public Health and Professor at the Dana-Farber Cancer Institute. John’s PhD was in Theoretical Physics but a fellowship to work on the Human Genome Project led him through the Salk Institute, Stanford University, and The Institute for Genomic Research (TIGR), before joining Harvard in 2005. John’s research uses massive data to probe how many small effects combine to influence our health and risk of disease. His published work has more than 97,000 citations and among his honors is recognition in 2013 as a White House Open Science Champion of Change. In 2012 he founded Genospace, a precision medicine software company that was sold to Hospital Corporation of America in 2017. In 2022, he was elected to the National Academy of Medicine.
+                                                        <p><strong><span style="font-size: 24px;">Why Networks Matter: Embracing Biological Complexity</span></strong>
                                                         </p>
+                                                        <p>One of the central tenets of biology is that our genetics—our genotype—influences the physical characteristics we manifest—our phenotype. But with more than 25,000 human genes and more than 6,000,000 common genetic variants mapped in our genome, finding associations between our genotype and phenotype is an ongoing challenge. Indeed, genome-wide association studies have found thousands of small effect size genetic variants that are associated with phenotypic traits and disease. The simplest explanation is that genes and genetic variants work together in complex regulatory networks that help define phenotypes and mediate phenotypic transitions. We have found that the networks, and their structure, provide unique insight into how genetic elements interact with each other and the structure of the network has predictive power for identifying critical processes in health and disease and for identifying potential therapeutic targets. However, estimating the drivers of disease phenotypes or predicting therapies that might be useful is tremendously challenging—if not computationally intractable. Drawing inspiration from Wolpert and MacReady’s “No Free Lunch Theorem for Optimization,” we have found that biologically motivated constraints can help guide inference of biologically interpretable in scalable ways that provide meaningful insight into functional changes that can drive cancers and other complex diseases as well as how they are influenced by factors that include biological sex and age.</p>
+
+                                                        <p><strong><span style="font-size: 20px;">Biography</span></strong></p>
+                                                        <p>John Quackenbush is Professor of Computational Biology and Bioinformatics in the Department of Biostatistics at the Harvard TH Chan School of Public Health and Professor at the Dana-Farber Cancer Institute. John’s PhD was in Theoretical Physics but a fellowship to work on the Human Genome Project led him through the Salk Institute, Stanford University, and The Institute for Genomic Research (TIGR), before joining Harvard in 2005. John’s research uses massive data to probe how many small genetic and other effects combine to influence our health and risk of disease. His more than 350 published papers have more than 102,000 citations and among his honors is recognition in 2013 as a White House Open Science Champion of Change. In 2012 he founded Genospace, a precision medicine software company that was sold to Hospital Corporation of America in 2017. In 2022, he was elected to the National Academy of Medicine.
+
+</p>
                                                         <p>&nbsp;</p>
                                                     </div>
 
@@ -1890,7 +1894,7 @@
 
 
                                                 <div class="et_pb_team_member_description">
-                                                    <a href="https://cs.stanford.edu/people/jure/" target="_blank">
+                                                    <a href="https://cs.stanford.edu/~jure/" target="_blank">
                                                         <h4 class="et_pb_module_header">Jure Leskovec</h4>
                                                     </a>
 
@@ -1903,9 +1907,16 @@
                                                         <p><strong>Abstract</strong></p>
                                                         <p></p>
                                                         <p>&nbsp;</p> -->
-                                                        <p><strong>Bio:</strong></p>
-                                                        <p>Jure Leskovec is Professor of Computer Science at Stanford University. He is affiliated with the Stanford AI Lab, the Machine Learning Group and the Center for Research on Foundation Models. In thepast, he served as a Chief Scientist at Pinterest and was an investigator at Chan Zuckerberg BioHub.  Most recently, he co-founded machine learning startup Kumo.AI. Leskovec pioneered the field of Graph Neural Networks and created PyG, the most widely-used graph neural network library.Research from his group has been used by many countries to fight COVID-19 pandemic, and has been incorporated into products at Facebook, Pinterest, Uber, YouTube, Amazon, and more. His research received several awards including Microsoft Research Faculty Fellowship in 2011, Okawa Research award in2012, Alfred P. Sloan Fellowship in 2012, Lagrange Prize in 2015, ICDM Research Contributions Award in 2019, and ACM SIGKDD Innovation award in 2023. His research contributions have spanned social networks, data mining and machine learning, and computational biomedicine with the focus on drugdiscovery. His work has won 12 best paper awards and 5 10-year test of time awards at premier venues in these research areas. Leskovec received his bachelor's degree in computer science from University of Ljubljana, Slovenia, PhD in machine learning from Carnegie Mellon University and postdoctoraltraining at Cornell University.</p>
-                                                        <p>&nbsp;</p>
+
+                                                        <p><strong><span style="font-size: 24px;">Relational Foundation Models: A New Frontier for Predictive AI in Structured Data</span></strong>
+                                                        </p>
+                                                        <p>Foundation Models have transformed how we interact with unstructured data--—enabling seamless in-context learning across text, images, and code. Yet, the structured data that drives core decisions in enterprises—transaction logs, customer journeys, events, time series—remains locked behind brittle pipelines and handcrafted machine learning models. In this talk, I will introduce Relational Foundation Models (RFMs), a new class of pre-trained models that unlock in-context learning over relational data, just as LLMs did for language.
+RFMs model multi-table, heterogeneous graph-structured data and can predict complex outcomes---such as user engagement, purchases, churn, fraud, and recommendations---without per-task supervision, feature engineering, or model training. I will describe the architecture and training objectives of RFMs, which combine table-agnostic embeddings, relational transformers, and SQL-like prompt interfaces. The result is a single general-purpose model that makes accurate, fast predictions across a broad class of tasks, often outperforming traditional supervised pipelines built over months.
+We will explore how RFMs reshape the paradigm of predictive AI---from model-building as a craft to model-use as querying---and what this means for the future of recommender systems, classification, regression, and more. I will argue that RFMs are not a replacement for LLMs but their structured-data complement---together forming the foundation for the next generation of enterprise AI.</p>
+
+
+                                                        <p><strong><span style="font-size: 20px;">Biography</span></strong></p>
+                                                        <p><a href="http://cs.stanford.edu/~jure" target="_blank">Jure Leskovec</a> is Professor of Computer Science at Stanford University. He is affiliated with the Stanford AI Lab, the Machine Learning Group and the Center for Research on Foundation Models. In the past, he served as a Chief Scientist at Pinterest and was an investigator at Chan Zuckerberg BioHub. Most recently, he co-founded AI startup Kumo.AI. Leskovec pioneered the field of Graph Neural Networks and created PyG, the most widely-used graph neural network library. Research from his group has been used by many countries to fight COVID-19 pandemic, and has been incorporated into products at Meta, Pinterest, Uber, YouTube, Amazon, and more. His research received several awards including Microsoft Research Faculty Fellowship in 2011, Okawa Research award in 2012, Alfred P. Sloan Fellowship in 2012, Lagrange Prize in 2015, ICDM Research Contributions Award in 2019, and ACM SIGKDD Innovation award in 2023. His research contributions have spanned social networks, data mining and machine learning, and computational biomedicine with the focus on drug discovery. His work has won 13 best paper awards and 6 10-year test of time awards at premier venues in these research areas. Leskovec received his bachelor's degree in computer science from University of Ljubljana, Slovenia, PhD in machine learning from Carnegie Mellon University and postdoctoral training at Cornell University.<p>&nbsp;</p>
                                                         <p>&nbsp;</p>
                                                     </div>
 
