--- a/travel.html
+++ b/travel.html
@@ -1863,7 +1863,7 @@
                                                             LARGO and disembark at the Federal
                                                             Triangle station, which is a short 10-minute walk to the
                                                             Conference Venue. For more transit
-                                                            options, please consult <a href="https://www.rome2rio.com/map/Reagan-Washington-Airport-DCA/Hyatt-Regency-Washington-on-Capitol-Hill#trips"
+                                                            options, please consult <a href="https://www.google.com/maps/dir/Ronald+Reagan+Washington+National+Airport+(DCA),+Smith+Boulevard,+Arlington,+VA/Capital+Hilton,+16th+Street+Northwest,+Washington,+DC/@38.8753601,-77.0637142,14z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89b7b731402fe095:0x4168af016d076bad!2m2!1d-77.039176!2d38.8501079!1m5!1m1!1s0x89b7b7be57f45d79:0xe54ae1a5d8eab767!2m2!1d-77.0357171!2d38.9032196!3e0?entry=ttu&g_ep=EgoyMDI1MDkwMy4wIKXMDSoASAFQAw%3D%3D"
                                                             target="_blank">here</a>. </li>
                                                         <li>From Washington Dulles International Airport (IAD):
                                                             Approximately 31.9 miles from downtown
@@ -1877,7 +1877,7 @@
                                                             7-minute walk from the venue. Note that
                                                             Megabus operates on a limited schedule, with only one daily
                                                             trip, so please check availability in
-                                                            advance. [For more transportation choices, refer <a href="https://www.rome2rio.com/map/Washington-Dulles-Airport-IAD/Hyatt-Regency-Washington-on-Capitol-Hill?search=Washington-Dulles-Airport-IAD,Hyatt-Regency-Washington-on-Capitol-Hill#trips"
+                                                            advance. [For more transportation choices, refer <a href="https://www.google.com/maps/dir/Dulles+International+Airport,+1+Saarinen+Cir,+Dulles,+VA+20166/Capital+Hilton,+16th+Street+Northwest,+Washington,+DC/@38.9216899,-77.4116065,11z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89b64740174eb057:0x8e01cb201080601d!2m2!1d-77.4578886!2d38.9522483!1m5!1m1!1s0x89b7b7be57f45d79:0xe54ae1a5d8eab767!2m2!1d-77.0357171!2d38.9032196!3e0?entry=ttu&g_ep=EgoyMDI1MDkwMy4wIKXMDSoASAFQAw%3D%3D"
                                                             target="_blank">here</a> .]
                                                         </li>
                                                         <li>From Baltimore/Washington International Thurgood Marshall
@@ -1889,7 +1889,7 @@
                                                             you may board either MARC or Amtrak trains heading to
                                                             Washington's Union Station, which is
                                                             just an 8-minute walk from the Conference Venue. [For more
-                                                            details on transit options, see <a href="https://www.rome2rio.com/map/Baltimore-Airport-BWI/Hyatt-Regency-Washington-on-Capitol-Hill?search=Baltimore-Airport-BWI,Hyatt-Regency-Washington-on-Capitol-Hill#trips"
+                                                            details on transit options, see <a href="https://www.google.com/maps/dir/BWI+Thurgood+Marshall+Airport+(BWI),+Friendship+Road,+Baltimore,+MD/Capital+Hilton,+16th+Street+Northwest,+Washington,+DC/@39.0697343,-76.9718703,11z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89b7e2fcbbc2e00b:0x150cfa971740!2m2!1d-76.6683935!2d39.1774139!1m5!1m1!1s0x89b7b7be57f45d79:0xe54ae1a5d8eab767!2m2!1d-77.0357171!2d38.9032196!3e0?entry=ttu&g_ep=EgoyMDI1MDkwMy4wIKXMDSoASAFQAw%3D%3D"
                                                             target="_blank">here</a>. 
                                                             ]</li>
                                                     </p>
