--- a/sponsors.html
+++ b/sponsors.html
@@ -1754,15 +1754,15 @@
 
 
                                                 <div class="et_pb_text_inner">
-                                                    <h4 style="font-size: 24px;"><strong>Diamond Level:</strong></h4>
+                                                    <h4 style="font-size: 24px;"><strong>Diamond Sponsorship:</strong></h4>
                                                     <div style="text-align: center; margin: 20px 0;">
                                                         <a href="https://www.nsf.gov" target="_blank" rel="noopener">
                                                             <img src="./images/sponsors/NSF.svg"
-                                                                alt="U.S. National Science Foundation" width="800"
-                                                                height="800">
+                                                                alt="U.S. National Science Foundation" width="400"
+                                                                height="400">
                                                         </a>
                                                         <div
-                                                            style="height: 1px; border-top: 1px dashed #ccc; width: 800px; margin: 15px auto 10px;">
+                                                            style="height: 1px; border-top: 1px dashed #ccc; width: 400px; margin: 15px auto 10px;">
                                                         </div>
                                                         <h4
                                                             style="font-size: 20px; color: #555; margin: 0; font-family: Arial, sans-serif;">
@@ -1770,6 +1770,44 @@
                                                             </p>
                                                     </div>
 
+
+                                                    <div style="text-align: center; margin: 20px 0;">
+                                                        <a href="https://www.nsf.gov" target="_blank" rel="noopener">
+                                                            <img src="./images/sponsors/Amazon.png"
+                                                                alt="U.S. National Science Foundation" width="400"
+                                                                height="400">
+                                                        </a>
+                                                        <div
+                                                            style="height: 1px; border-top: 1px dashed #ccc; width: 400px; margin: 15px auto 10px;">
+                                                        </div>
+                                                        <h4
+                                                            style="font-size: 20px; color: #555; margin: 0; font-family: Arial, sans-serif;">
+                                                            Amazon
+                                                            </p>
+                                                    </div>
+                                                
+
+                                                    <br><br>
+
+                                                
+                                                    <h4 style="font-size: 24px;"><strong>Gold Sponsorship:</strong></h4>
+                                                    <div style="text-align: center; margin: 20px 0;">
+                                                        <a href="https://www.nsf.gov" target="_blank" rel="noopener">
+                                                            <img src="./images/sponsors/PayPal.png"
+                                                                alt="U.S. National Science Foundation" width="400"
+                                                                height="400">
+                                                        </a>
+                                                        <div
+                                                            style="height: 1px; border-top: 1px dashed #ccc; width: 400px; margin: 15px auto 10px;">
+                                                        </div>
+                                                        <h4
+                                                            style="font-size: 20px; color: #555; margin: 0; font-family: Arial, sans-serif;">
+                                                            Paypal
+                                                            </p>
+                                                    </div>
+
+
+                                                    <br><br>
 
 
 
