--- a/sponsors.html
+++ b/sponsors.html
@@ -1769,8 +1769,7 @@
                                                     <div style="text-align: center; margin: 20px 0;">
                                                         <a href="https://www.nsf.gov" target="_blank" rel="noopener">
                                                             <img src="./images/sponsors/NSF.svg"
-                                                                alt="U.S. National Science Foundation" width="400"
-                                                                height="400">
+                                                                alt="U.S. National Science Foundation" style="max-width: 90%; height: auto; width: 400px;">
                                                         </a>
                                                         <div
                                                             style="height: 1px; border-top: 1px dashed #ccc; width: 400px; margin: 15px auto 10px;">
@@ -1778,15 +1777,14 @@
                                                         <h4
                                                             style="font-size: 20px; color: #555; margin: 0; font-family: Arial, sans-serif;">
                                                             U.S. National Science Foundation
-                                                            </p>
+                                                            </h4>
                                                     </div>
 
 
                                                     <div style="text-align: center; margin: 20px 0;">
-                                                        <a href="https://www.nsf.gov" target="_blank" rel="noopener">
+                                                        <a href="https://www.amazon.com/" target="_blank" rel="noopener">
                                                             <img src="./images/sponsors/Amazon.png"
-                                                                alt="U.S. National Science Foundation" width="400"
-                                                                height="400">
+                                                                alt="U.S. National Science Foundation" style="max-width: 90%; height: auto; width: 400px;">
                                                         </a>
                                                         <div
                                                             style="height: 1px; border-top: 1px dashed #ccc; width: 400px; margin: 15px auto 10px;">
@@ -1794,19 +1792,18 @@
                                                         <h4
                                                             style="font-size: 20px; color: #555; margin: 0; font-family: Arial, sans-serif;">
                                                             Amazon
-                                                            </p>
+                                                            </h4>
                                                     </div>
                                                 
 
-                                                    <br><br>
+                                                    <br>
 
                                                 
                                                     <h4 style="font-size: 24px;"><strong>Gold Sponsorship:</strong></h4>
                                                     <div style="text-align: center; margin: 20px 0;">
-                                                        <a href="https://www.nsf.gov" target="_blank" rel="noopener">
+                                                        <a href="https://www.paypal.com/" target="_blank" rel="noopener">
                                                             <img src="./images/sponsors/PayPal.png"
-                                                                alt="U.S. National Science Foundation" width="400"
-                                                                height="400">
+                                                                alt="U.S. National Science Foundation" style="max-width: 90%; height: auto; width: 400px;">
                                                         </a>
                                                         <div
                                                             style="height: 1px; border-top: 1px dashed #ccc; width: 400px; margin: 15px auto 10px;">
@@ -1814,11 +1811,11 @@
                                                         <h4
                                                             style="font-size: 20px; color: #555; margin: 0; font-family: Arial, sans-serif;">
                                                             Paypal
-                                                            </p>
+                                                            </h4>
                                                     </div>
 
 
-                                                    <br><br>
+                                                    <br>
 
 
 
