--- a/workshops.html
+++ b/workshops.html
@@ -1621,15 +1621,16 @@
 							</li>
 
 							<li
-								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1390">
-								<a href="index.html">Sponsors</a>
-								<!--
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-995"><a href="sponsorsopport/index.html">Sponsorship Opportunities</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1391"><a href="sponsorslist/index.html">Sponsors</a></li>
-</ul>
--->
-							</li>
+                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-171">
+                                <a href="index.html">Sponsors</a>
+                                <ul class="sub-menu" style="min-width: 270px;">
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633">
+                                        <a href="sponsors.html"
+                                            style="white-space: nowrap; display: block; padding: 10px 20px;">Sponsors
+                                            </a>
+                                    </li>
+                                </ul>
+                            </li>
 							<li
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-705">
 								<a href="index.html" aria-current="page">Attending</a>
