--- a/travel.html
+++ b/travel.html
@@ -1625,14 +1625,15 @@
 							</li>
 
                             <li
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1390">
+                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-171">
                                 <a href="index.html">Sponsors</a>
-                                <!--
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-995"><a href="sponsorsopport/index.html">Sponsorship Opportunities</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1391"><a href="sponsorslist/index.html">Sponsors</a></li>
-</ul>
--->
+                                <ul class="sub-menu" style="min-width: 270px;">
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633">
+                                        <a href="sponsors.html"
+                                            style="white-space: nowrap; display: block; padding: 10px 20px;">Sponsors
+                                            </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li
                             class="menu-item menu-item-type-post_type current-menu-item menu-item-object-page menu-item-has-children menu-item-705">
