--- a/keydates.html
+++ b/keydates.html
@@ -1766,7 +1766,7 @@
 													<ul>
 
 														<li>Full paper submissions: <del>Friday, June 6, 2025</del></li>
-														<li>Notifications to authors: Monday, August 25, 2025</li>
+														<li>Notifications to authors: <del>Monday, August 25, 2025</del></li>
 														<li>Camera ready: Thursday, September 25, 2025</li>
 													</ul>
 
@@ -1775,14 +1775,14 @@
 
 														<li>Workshop proposals deadline: <del>Friday, March 14, 2025</del></li>
 														<li>Workshop proposals notification: <del>Monday, April 11, 2025</del></li>
-														<li>Workshop paper submission deadline: Monday, September 1, 2025</li>
+														<li>Workshop paper submission deadline: <del>Monday, September 1, 2025</del></li>
 														<li>Camera ready: Thursday, September 25, 2025</li>
 													</ul>
 
 													<h4><strong>Tutorials</strong></h4>
 													<ul>
 
-														<li>Tutorial proposal due: Friday, September 5, 2025</li>
+														<li>Tutorial proposal due: <del>Friday, September 5, 2025</del></li>
 														<li>Notification: Friday, September 26, 2025</li>
 
 													</ul>
@@ -1790,14 +1790,14 @@
 													<h4><strong>Demonstrations</strong></h4>
 													<ul>
 
-														<li>Demo paper submission: Friday, September 5, 2025</li>
+														<li>Demo paper submission: <del>Friday, September 5, 2025</del></li>
 														<li>Notification to authors: Friday, September 19, 2025</li>
 													</ul>
 
 													<h4><strong>REU Symposium</strong></h4>
 													<ul>
 
-														<li>Paper submission due date: Monday, September 1, 2025</li>
+														<li>Paper submission due date: <del>Monday, September 1, 2025</del></li>
 														<li>Decision notification: Friday, September 19, 2025</li>
 														<li>Camera-ready due date: Wednesday, October 15, 2025</li>
 														<li>Symposium: one day in November 12-15, 2025</li>
@@ -1806,7 +1806,7 @@
 													<h4><strong>Undergraduate and High School Symposium</strong></h4>
 													<ul>
 
-														<li>Paper Submission Deadline: Monday, September 1, 2025 11:59 PM AoE</li>
+														<li>Paper Submission Deadline: <del>Monday, September 1, 2025 11:59 PM AoE</del></li>
 														<li>Notification of Acceptance: Wednesday, October 1, 2025</li>
 														<li>Camera-Ready Paper Submission: Wednesday, October 15, 2025</li>
 
