--- a/sponsors.html
+++ b/sponsors.html
@@ -1783,7 +1783,7 @@
 
                                                     <div style="text-align: center; margin: 20px 0;">
                                                         <a href="https://www.amazon.com/" target="_blank" rel="noopener">
-                                                            <img src="./images/sponsors/Amazon.png"
+                                                            <img src="./images/sponsors/Standard-Lockup.svg"
                                                                 alt="U.S. National Science Foundation" style="max-width: 90%; height: auto; width: 400px;">
                                                         </a>
                                                         <div
