--- a/index_developing.html
+++ b/index_developing.html
@@ -1771,10 +1771,12 @@
 												<div class="et_pb_text_inner">
 
 
-                                                    <p><strong>Registration Dates</strong></p>
+                                                    <p><strong>Key Dates</strong></p>
 
-                                                    <p>* Non-author early bird retristration due: September 24, 2025<br />
-                                                    * Author regristration due: September 24, 2025</p>
+                                                    <p>* Non-author early bird <a href="registration.html" target="_blank">retristration due</a>: September 24, 2025<br />
+                                                    * Author <a href="registration.html" target="_blank">retristration due</a>: September 24, 2025<br />
+                                                    * <a href="https://www.cse.fau.edu/~xqzhu/taoliaward/icdm-tao-li-award.html" target="_blank">Tao Li Award</a> Submission due:  October 5, 2025
+                                                </p>
 
                                                     <p><strong>Registration Link</strong></p>
                                                     <p><a href="https://cvent.me/MMZ80K"
