--- a/index_developing.html
+++ b/index_developing.html
@@ -1773,8 +1773,8 @@
 
                                                     <p><strong>Key Dates</strong></p>
 
-                                                    <p>* Non-author early bird <a href="registration.html" target="_blank">retristration due</a>: September 24, 2025<br />
-                                                    * Author <a href="registration.html" target="_blank">retristration due</a>: September 24, 2025<br />
+                                                    <p>* Non-author early bird <a href="registration.html" target="_blank">retristration </a>due: September 24, 2025<br />
+                                                    * Author <a href="registration.html" target="_blank">retristration </a>due: September 24, 2025<br />
                                                     * <a href="https://www.cse.fau.edu/~xqzhu/taoliaward/icdm-tao-li-award.html" target="_blank">Tao Li Award</a> Submission due:  October 5, 2025
                                                 </p>
 
