--- a/index_developing.html
+++ b/index_developing.html
@@ -1739,6 +1739,9 @@
                                                                         </h1>
                                                                         <h1 style="text-align: center;">November 12-15,
                                                                             2025<br />Washington DC, USA</h1>
+                                                                        <h4 style="text-align: center;">Non-author early bird registration due: September 24, 2025</h4>
+                                                                        <h4 style="text-align: center;">Author registration due: September 24, 2025</h4>
+                                                                        <h4 style="text-align: center;">Tao Li Award Submission due: October 5, 2025</h4>
                                                                     </div>
 
                                                                 </div>
@@ -1763,6 +1766,7 @@
                                                                         </h1>
                                                                         <h1 style="text-align: center;">November 12-15,
                                                                             2025<br />Washington DC, USA</h1>
+                                                                        
                                                                     </div>
 
                                                                 </div>
@@ -1964,7 +1968,7 @@
 
 
                                 <!-- sponsors -->
-                                <div style="padding: 60px 0; text-align: center; background-color: transparent;">
+                                <!-- <div style="padding: 60px 0; text-align: center; background-color: transparent;">
                                     <div
                                         style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap; gap: 50px; max-width: 1200px; margin: 0 auto;">
                                         <img src="./images//sponsors/Amazon.png" alt="Logo 1"
@@ -1988,7 +1992,7 @@
                                             onmouseover="this.style.opacity='1'; this.style.transform='scale(1.3)'; this.style.boxShadow='0 10px 30px rgba(0,0,0,0.15)';"
                                             onmouseout="this.style.opacity='0.9'; this.style.transform='scale(1)'; this.style.boxShadow='none';">
                                     </div>
-                                </div>
+                                </div> -->
 
 
                             </div>
