--- a/index.html
+++ b/index.html
@@ -1738,8 +1738,8 @@
 																<div class="et_pb_slide_description">
 																	<h2 class="et_pb_slide_title">IEEE ICDM 2025</h2>
 																	<div class="et_pb_slide_content">
-																		<h1 style="text-align: center;">The 25th IEEE
-																			International Conference<br />on Data Mining
+																		<h1 style="text-align: center;">The world’s premier research conference
+<br>in Data Mining
 																		</h1>
 																		<h1 style="text-align: center;">November 12-15,
 																			2025<br />Washington DC, USA</h1>
@@ -1762,8 +1762,8 @@
 																<div class="et_pb_slide_description">
 																	<h2 class="et_pb_slide_title">IEEE ICDM 2025</h2>
 																	<div class="et_pb_slide_content">
-																		<h1 style="text-align: center;">25th IEEE
-																			International Conference<br />on Data Mining
+																		<h1 style="text-align: center;">The world’s premier research conference
+<br>in Data Mining
 																		</h1>
 																		<h1 style="text-align: center;">November 12-15,
 																			2025<br />Washington DC, USA</h1>
@@ -1786,8 +1786,8 @@
 																<div class="et_pb_slide_description">
 																	<h2 class="et_pb_slide_title">IEEE ICDM 2025</h2>
 																	<div class="et_pb_slide_content">
-																		<h1 style="text-align: center;">25th IEEE
-																			International Conference<br />on Data Mining
+																		<h1 style="text-align: center;">The world’s premier research conference
+<br>in Data Mining
 																		</h1>
 																		<h1 style="text-align: center;">November 12-15,
 																			2025<br />Washington DC, USA</h1>
@@ -1816,7 +1816,7 @@
 								</div>
 
 								<!-- title -->
-								<div
+								<!-- <div
 									class="et_pb_section et_pb_section_1 et_pb_with_background et_pb_fullwidth_section et_section_regular">
 
 
@@ -1850,7 +1850,7 @@
 									</section>
 
 
-								</div>
+								</div> -->
 
 								<div class="et_pb_section et_pb_section_2 et_section_regular">
 
