--- a/index_developing.html
+++ b/index_developing.html
@@ -1863,14 +1863,14 @@
 												<div class="et_pb_text_inner">
 													<h3>Key Dates</h3>
 													<ul style="line-height: 2.0; font-size: 16px;">
-														<li><strong>Non-author early bird registration due: </strong>September 24, 2025</li>
-														<li><strong>Author registration due: </strong>September 24, 2025</li>
-														<li><strong>Main conference camera ready due: </strong>Thursday, September 25, 2025</li>
-														<li><strong>Workshops camera ready due: </strong>Thursday, September 25, 2025</li>
-														<li><strong>Tao Li Award submission due: </strong>October 5, 2025</li>
-														<li><strong>REU symposium camera ready due: </strong>Wednesday, October 15, 2025</li>
-														<li><strong>Undergraduate and high school symposium camera ready due: </strong>Wednesday, October 15, 2025</li>
-														<li><strong>Hotel room block cut-off date: </strong>Saturday, October 18, 2025</li>
+														<li><strong>Non-author early bird <a href="registration.html" target="_blank">registration</a> due: </strong>September 24, 2025</li>
+														<li><strong>Author <a href="registration.html" target="_blank">registration</a> due: </strong>September 24, 2025</li>
+														<li><strong><a href="cfp.html" target="_blank">Main conference</a> camera ready due: </strong>Thursday, September 25, 2025</li>
+														<li><strong><a href="cfw.html" target="_blank">Workshops</a> camera ready due: </strong>Thursday, September 25, 2025</li>
+														<li><strong><a href="https://www.cse.fau.edu/~xqzhu/taoliaward/icdm-tao-li-award.html" target="_blank">Tao Li Award</a> submission due: </strong>October 5, 2025</li>
+														<li><strong><a href="https://bigdatareu.umbc.edu/reu-symposium/reu-symposium-2025/" target="_blank">REU symposium</a> camera ready due: </strong>Wednesday, October 15, 2025</li>
+														<li><strong><a href="https://2025-icdm-ughs.github.io/" target="_blank">Undergraduate and high school symposium</a> camera ready due: </strong>Wednesday, October 15, 2025</li>
+														<li><strong><a href="venue.html" target="_blank">Hotel room block cut-off</a> date: </strong>Saturday, October 18, 2025</li>
 													</ul>
 													<p style="font-size: 14px; color: #666;">* All deadlines are end-of-day in the Anywhere on Earth (AoE) time zone.</p>
 												</div>
