--- a/index_developing.html
+++ b/index_developing.html
@@ -1915,8 +1915,8 @@
                                             <div
                                                 class="et_pb_module et_pb_text et_pb_text_0 et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
-                                                    <p><strong>Key Dates</strong></p>
-                                                    <!-- <p>* Non-author early bird <a href="registration.html"
+                                                    <!-- <p><strong>Key Dates</strong></p>
+                                                    <p>* Non-author early bird <a href="registration.html"
                                                             target="_blank">registration </a>due: September 24,
                                                         2025<br />
                                                         * Author <a href="registration.html"
