--- a/workshops.html
+++ b/workshops.html
@@ -1766,8 +1766,7 @@
 
 														<li><a
 																href="https://ai4css.github.io/">AI4CSS</a>:
-															AI for Computational Social Science (Website in
-															progress)</li>
+															AI for Computational Social Science</li>
 													
 														<li><a
 																href="https://sites.google.com/view/ai4fcf/home-page">AI4FCF</a>:
