--- a/index.html
+++ b/index.html
@@ -1933,6 +1933,8 @@
 
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
+                                                        <li><a href="authorinstruction.html"
+                                                                target="_blank">Instrction for authors</a> has been posted. </li>
                                                         <li>
                                                             Author and early bird registration deadline is September 24,
                                                             2025.
@@ -1950,6 +1952,8 @@
                                                             <a href="https://www.cse.fau.edu/~xqzhu/taoliaward/icdm-tao-li-award.html"
                                                                 target="_blank">Details</a>.
                                                         </li>
+                                                        
+                                                        
                                                     </ul>
                                                     <hr />
 
