--- a/authorinstruction.html
+++ b/authorinstruction.html
@@ -1733,7 +1733,7 @@
 											<div class="header-content-container center">
 												<div class="header-content">
 
-													<h1 class="et_pb_module_header">Author Instructions for Camera-Ready Paper and Video Submission
+													<h1 class="et_pb_module_header">Author Instructions for Camera-Ready Paper (Main Conference) and Video Submission
 													</h1>
 
 													<div class="et_pb_header_content_wrapper"></div>
